Changelog for collective.contacts
=================================

    (name of developer listed in brackets)

SVN
---

  * Fixed use of deprecated zcml directive "vocabulary". see
    http://wiki.zope.org/zope3/ReducingTheAmountOfZCMLDirectives [thet]

  * Removed "default-skin" directive from skins.xml [thet]

  * Fixed XHTML validation for several templates. [emanuel]

  * Depend on newer version of ATExtensions. [frapell]

  * Fixed testing infrastructure which was outdated. [emanuel, frapell]

1.4.1
-----

  * Changed the skin layers, now the product will not add his own Skin to
    portal_skins, but instead it will add its layer to all of them and use
    "Plone Default".

1.4.0
-----

  * Added a customize view so it's possible to select which columns are shown
    or not.

  * Removed the "Import organizations or persons" from the groups view, since
    it was misleading.

  * Added an update step to add the needed field to all address books that were
    created before this version.

  * Added sizes to the photo field for persons, and an update step that will
    handle the existing objects that were created before this version.

  * Added some security checks to the import buttons and import view page.

  * Fixed two province names from Guatemala (Thanks Warren).

1.3.3
-----

  * Added the sub-sector field to the columns in the organizations view.

  * Did some rework on the advanced search templates (for persons and
    organizations).

  * Fixed the referencebrowser_popup template that wasn't showing content when
    re-editing a person or a group.

  * Fixed bug where drop down fields will not update their content when editing
    inline.

  * Fixed a typo in spanish translation ("Eportar" instead of "Exportar").

  * Added a css to override Plone's default behaviour when editing a drop down
    field inline (it repeats the field label).

1.3.2
-----

  * Included a custom referencobrowser_popup to show only objects that are